example/secondfile/objects/APEX_Product_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Access_Architecture__c</fullName>
        <label>Access_Architecture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Key_Value__c</fullName>
        <formula>IF(Service_Segment__c == &apos;CIR&apos;, Description__c ,Transport_Type__c+&apos; &apos;+Speed_Value__c+&apos; &apos;+Speed_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Key Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BVoip_Ip_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BVoip Ip Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BVoip_Line_Features__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BVoip Line Features</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BVoip_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BVoip Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BVoip_Truck_Calling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BVoip Truck Calling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compatible_Access_ID__c</fullName>
        <label>Compatible Access ID</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compatible_DNS_ID__c</fullName>
        <label>Compatible DNS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compatible_IPFlex_ID__c</fullName>
        <label>Compatible IPFlex ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compatible_Install_ID__c</fullName>
        <label>Compatible Install ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compatible_MBC__c</fullName>
        <label>Compatible MBC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compatible_Service_Code__c</fullName>
        <label>Compatible Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls_Max__c</fullName>
        <label>Concurrent Calls Max</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls_Min__c</fullName>
        <label>Concurrent Calls Min</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectivity_Type__c</fullName>
        <label>Connectivity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Access_Id__c</fullName>
        <label>Default Access Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Cos_ID__c</fullName>
        <label>Default Cos ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Hicap_ID__c</fullName>
        <label>Default Hicap ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Install__c</fullName>
        <label>Default Install</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dw_Speed__c</fullName>
        <label>Dw Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flatrate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flatrate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hicap_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hicap Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_Type__c</fullName>
        <label>Id Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBC_Description__c</fullName>
        <label>MBC_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port_Key_Value__c</fullName>
        <formula>IF( Service_Code__c == &apos;ADI&apos;, &apos;AMIS&apos;, Service_Code__c)+&apos; &apos;+IF( Transport_Type__c == &apos;ETHERNET&apos;,&apos;Switched Ethernet&apos;,&apos;Private Line&apos;)+&apos; &apos;+ Speed_Value__c +&apos; &apos;+Speed_Unit__c +&apos; &apos;+Connectivity_Type__c+&apos; &apos;+IF (Managed_Service__c == true,&apos;true&apos;,&apos;false&apos;)</formula>
        <label>Port Key Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Abbrevation__c</fullName>
        <label>Product Abbrevation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_ID__c</fullName>
        <label>Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Segment__c</fullName>
        <label>Service Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Name__c</fullName>
        <label>Speed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Type__c</fullName>
        <label>Speed Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Unit__c</fullName>
        <label>Speed Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Value__c</fullName>
        <label>Speed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_Speed__c</fullName>
        <label>Up Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vlan</label>
        <type>Checkbox</type>
    </fields>
    <label>APEX Product Catalog</label>
    <listViews>
        <fullName>Access</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Service_Segment__c</columns>
        <columns>Speed_Name__c</columns>
        <columns>Speed_Type__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Speed_Value__c</columns>
        <columns>Speed_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.Access_Catalog</value>
        </filters>
        <label>Access</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Service_Name__c</columns>
        <columns>Service_Segment__c</columns>
        <columns>Speed_Name__c</columns>
        <columns>Speed_Type__c</columns>
        <columns>Speed_Unit__c</columns>
        <columns>Speed_Value__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>COS</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <columns>Service_ID__c</columns>
        <columns>Version__c</columns>
        <columns>Active__c</columns>
        <columns>Service_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.COS_Catalog</value>
        </filters>
        <label>COS</label>
    </listViews>
    <listViews>
        <fullName>DNS</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Service_ID__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Version__c</columns>
        <columns>Active__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.DNS_Catalog</value>
        </filters>
        <label>DNS</label>
    </listViews>
    <listViews>
        <fullName>HiCapFlex</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Speed_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Version__c</columns>
        <columns>Active__c</columns>
        <columns>Service_ID__c</columns>
        <columns>Service_Segment__c</columns>
        <columns>Speed_Name__c</columns>
        <columns>Speed_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.HiCapFlex_Catalog</value>
        </filters>
        <label>HiCapFlex</label>
    </listViews>
    <listViews>
        <fullName>IPFlex</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Service_ID__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Version__c</columns>
        <columns>Active__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <columns>BVoip_Ip_Id__c</columns>
        <columns>BVoip_Local__c</columns>
        <columns>BVoip_Truck_Calling__c</columns>
        <columns>BVoip_Line_Features__c</columns>
        <columns>Concurrent_Calls_Min__c</columns>
        <columns>Concurrent_Calls_Max__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.IPFlex_Catalog</value>
        </filters>
        <label>IPFlex</label>
    </listViews>
    <listViews>
        <fullName>Installation</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Service_ID__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Version__c</columns>
        <columns>Active__c</columns>
        <columns>Transport_Type__c</columns>
        <columns>Product_Abbrevation__c</columns>
        <columns>Service_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.Installation_Catalog</value>
        </filters>
        <label>Installation</label>
    </listViews>
    <listViews>
        <fullName>Port</fullName>
        <columns>NAME</columns>
        <columns>Id_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Service_Segment__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Speed_Name__c</columns>
        <columns>Speed_Type__c</columns>
        <columns>Speed_Unit__c</columns>
        <columns>Speed_Value__c</columns>
        <columns>Managed_Service__c</columns>
        <columns>Connectivity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APEX_Product_Catalog__c.Port_Catalog</value>
        </filters>
        <label>Port</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APEX Product Catalog</pluralLabel>
    <recordTypes>
        <fullName>Access_Catalog</fullName>
        <active>true</active>
        <description>Record Type for Access Catalog</description>
        <label>Access Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>COS_Catalog</fullName>
        <active>true</active>
        <description>Record Type for COS Catalog</description>
        <label>COS Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>DNS_Catalog</fullName>
        <active>true</active>
        <description>Record Type for DNS Catalog</description>
        <label>DNS Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>HiCapFlex_Catalog</fullName>
        <active>true</active>
        <description>Record Type for HiCapFlex Catalog</description>
        <label>HiCapFlex Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPFlex_Catalog</fullName>
        <active>true</active>
        <description>Record Type for IPFlex Catalog</description>
        <label>IPFlex Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Catalog</fullName>
        <active>true</active>
        <description>Record Type for Installation Catalog</description>
        <label>Installation Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Port_Catalog</fullName>
        <active>true</active>
        <description>Record Type for Port Catalog</description>
        <label>Port Catalog</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>